css/styles.css
ol  {
  list-style-type: none;
}
img {
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: auto;
  height: 400px;
  width: 500px;
  display: block;
}
p {
  font-family: sans-serif;
}
span  {
  font-family: fantasy;
}
.jumbotron  {
  background-color: #ff9966;
}
.jumbotron  {
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: auto;
}
body  {
  font-size: 20px;
  background-color: lightgray;
}
header  {
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: auto;
}
ol  {
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: auto;
}

